# rusty-rd

./: .gitignore  Cargo.toml  cpio_list
.cargo/: config.toml
scripts/: build_initrd.sh  find_libs.sh  run_qemu.sh  unpack_initrd.sh
src/: main.rs
