[package]
name = "init"
version = "0.1.0"
authors = ["Ben Cordero <bencord0@condi.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
netlink-packet-route = "0.19.0"
nix = { version = "0.29.0", features = ["kmod", "mount", "reboot"] }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls-webpki-roots"] }
rtnetlink = "0.14.1"
tokio = { version = "1", features = ["rt"] }
